testsuite/tests/lexical_envs/invalid_add_to_env/kv_dest_env.lkt
import common

class Example: FooNode implements TokenNode {
    env_spec {
        add_to_env_kv(key=node.symbol, value=node, dest_env=1)
    }
}
